--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "graphql": "^15.7.2",
     "joi": "^17.4.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
