--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - 35000:5432
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER : user
+      POSTGRES_PASSWORD: pawme
+      POSTGRES_USER : pawme
       POSTGRES_DB : pawmedb
