--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-POSTGRES_CONNECTION_STRING="postgresql://user:password@localhost:5432/pawmedb"
+POSTGRES_CONNECTION_STRING="postgresql://pawme:pawme@localhost:5432/pawmedb"
 NODE_ENV="development"
