--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - 35000:5432
     environment:
-      POSTGRES_PASSWORD: pawme
-      POSTGRES_USER : pawme
-      POSTGRES_DB : pawmedb
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
