--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
     "@types/passport-jwt": "^3.0.6",
     "@types/uuid": "^8.3.4",
